--- a/_data/data.yml
+++ b/_data/data.yml
@@ -27,7 +27,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Experienced Head of Infrastructure with a strong background in migrating applications to Kubernetes and automating DevOps tasks. Proficient in utilizing Infrastructure as Code (IaC) and implementing CI/CD pipelines. Adept at managing cross-functional teams and ensuring delivery of scalable, secure, and highly available infrastructure solutions.
+      Infastructure Engineer with a strong background in migrating applications to Kubernetes and automating DevOps tasks. Proficient in utilizing Infrastructure as Code (IaC) and implementing CI/CD pipelines. Adept at ensuring delivery of scalable, secure, and highly available infrastructure solutions.
 
 education:
     - degree: B.S. in Computer Science
