added graphql on Magic

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -75,7 +75,7 @@ experiences:
       time: Nov 2019 - Sep 2020
       company: <a href="https://getmagic.com" target="_blank">Magic</a>, Remote
       details: |
-        Responsible for maintaining and improving internal tools used by Virtual Assistants. Tech stack is Meteor, Mongo, React, and AWS.
+        Responsible for maintaining and improving internal tools used by Virtual Assistants. Tech stack is Meteor, Mongo, React, GraphQL, and AWS.
     - role: Senior Software Engineer
       time: Nov 2016 - Oct 2019
       company: <a href="https://zendesk.com" target="_blank">Zendesk</a>, ​Philippines
